--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-header></app-header>
 <div class="container">
-<h1>
-  <span>{{ title }}</span>
-</h1>
-<app-directiva></app-directiva>
+<router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
