--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -2,7 +2,7 @@
     <div class="card-header">{{titulo}}</div>
     <div class="card-body">
 
-        <form (ngsubmit) = "create()">
+        <form>
             <div class="form-group row">
                 <label for="nombre" class="col-form-label  col-sm-2">Nombre</label>
                 <div class="col-sm-6">
@@ -22,9 +22,13 @@
                 </div>
             </div>
             <div class="form-group row">
-                
+
                 <div class="col-sm-6">
-                    <button class="btn btn-primary" role="button">Crear</button>
+                    <button class="btn btn-primary" role="button" (click)="create()"
+                        *ngIf="!cliente.id else elseBlock">Crear</button>
+                    <ng-template #elseBlock>
+                        <button class="btn btn-primary" role="button" (click)="update()">Editar</button>
+                    </ng-template>
                 </div>
             </div>
         </form>
