--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -48,6 +48,6 @@
         </tr>
       </tbody>
     </table>
-
+    <paginator-nav *ngIf="paginador" [paginador] ="paginador"></paginator-nav>
   </div>
 </div>
